Added docker support, SnowflakeID and channels for each run